--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,110 @@
+body {
+	background-color: #ffb3a7;
+	background-image: linear-gradient(to bottom right, #d1d9e0, #75878a);
+	transition: 0.3s;
+}
+@font-face {
+	font-family: "Garamond";
+	src: url("/storage/emulated/0/暂/双语阅读/ted/resoure/font/Garamond-Regular-2.ttf");
+}
+@font-face {
+	font-family: "方正悠宋+ GBK 509R";
+	src: url("/storage/emulated/0/暂/双语阅读/ted/resoure/font/FZYouSJK_509R.TTF");
+}
+/*中文框*/
+.details {
+	font-family: "方正悠宋+ GBK 509R";
+	background-color: bisque;
+	border-radius: 5px;
+	margin: 1em auto;
+	padding: 1em;
+	font-size: 15px;
+	transition: 0.3s;
+	line-height: 1.5em;
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+/*英文框*/
+.content {
+	font-family: "Garamond";
+	background-color: bisque;
+	border-radius: 5px;
+	margin: 1em auto;
+	padding: 1em;
+	font-size: 18px;
+	transition: 0.3s;
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+p {
+	margin: 0;
+	padding: 0;
+	height: 0;
+	overflow: hidden;
+	transition: 0.3s ease-in;
+}
+/*黑暗模式*/
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #222;
+		background-image: linear-gradient(to bottom right, #75878a, #d1d9e0);
 
+	}
+	body .details {
+		background-color: #666;
+		color: #f2ecde;
+	}
+	body .content {
+		background-color: #666;
+		color: #f2ecde;
+	}
+}
+/*开始导航栏*/
+.nav {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+.dropbt {
+	background-color: antiquewhite;
+	border-radius: 10px 10px 0 0;
+	font-size: 12px;
+	margin: 0;
+	padding: 1em 0;
+	width: 100%;
+	position: relative;
+	text-align: center;
+}
+.dropdown {
+	background-color: aquamarine;
+	border-radius: 0 0 10px 10px;
+	font-size: 14px;
+	margin: 0;
+	height: 0;
+	transition: 0.3s;
+	width: 100%;
+	top: 100%;
+	overflow: hidden;
+	position: absolute;
+}
+.colorbox {
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	justify-content: center;
+}
+.coloritem {
+	color: red;
+	padding: 15px;
+	transition: 0.3s;
+}
+.coloritem:hover {
+	font-size: 18px;
+}
+.fenhong {background-color: #ffb3a7; color: #000000;}
+.jianghuang {background-color: #ffc773; color: #000000;}
+.chase {background-color: #b35c44; color: #000000;}
+.cangbai {background-color: #d1d9e0; color: #000000;}
+.shuise {background-color: #88ada6; color: #000000;}
+/*结束导航栏*/
