--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,11 @@ body {
 }
 @font-face {
 	font-family: "Garamond";
-	src: url("/storage/emulated/0/暂/双语阅读/ted/resoure/font/Garamond-Regular-2.ttf");
+	src: url("/resoure/font/Garamond-Regular-2.ttf");
 }
 @font-face {
 	font-family: "方正悠宋+ GBK 509R";
-	src: url("/storage/emulated/0/暂/双语阅读/ted/resoure/font/FZYouSJK_509R.TTF");
+	src: url("/resoure/font/FZYouSJK_509R.TTF");
 }
 /*中文框*/
 .details {
