--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@ body {
 	font-family: "Garamond";
 	src: url("../resource/font/Garamond-Regular-2.ttf");
 }
-@font-face {
+/*@font-face {
 	font-family: "方正悠宋+ GBK 509R";
 	src: url("../resource/font/FZYouSJK_509R.TTF");
-}
+}*/
 /*中文框*/
 .details {
-	font-family: "方正悠宋+ GBK 509R";
+	/*font-family: "方正悠宋+ GBK 509R";*/
 	background-color: bisque;
 	border-radius: 5px;
 	margin: 1em auto;
