--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body {
     position: absolute;
     top: 100%;
     width: 100%;
-    height: 2rem;
+    height: 0;
     overflow: hidden;
     background-color: aquamarine;
     border-radius: 0 0 10px 10px;
